@@ -37,17 +37,19 @@
 
 /* CoreData Framework */
 enum {
-      NSUndefinedAttributeType  = 0,
-      NSInteger16AttributeType  = 100,
-      NSInteger32AttributeType  = 200,
-      NSInteger64AttributeType  = 300,
-      NSDecimalAttributeType    = 400,
-      NSDoubleAttributeType     = 500,
-      NSFloatAttributeType      = 600,
-      NSStringAttributeType     = 700,
-      NSBooleanAttributeType    = 800,
-      NSDateAttributeType       = 900,
-      NSBinaryDataAttributeType = 1000
+      NSUndefinedAttributeType     = 0,
+      NSInteger16AttributeType     = 100,
+      NSInteger32AttributeType     = 200,
+      NSInteger64AttributeType     = 300,
+      NSDecimalAttributeType       = 400,
+      NSDoubleAttributeType        = 500,
+      NSFloatAttributeType         = 600,
+      NSStringAttributeType        = 700,
+      NSBooleanAttributeType       = 800,
+      NSDateAttributeType          = 900,
+      NSBinaryDataAttributeType    = 1000,
+      NSTransformableAttributeType = 1800,
+      NSObjectIDAttributeType      = 2000
 };
 typedef NSUInteger NSAttributeType;
 
