@@ -1,3 +1,9 @@
+2022-08-09 Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Headers/AppKit/NSPredicateEditorRowTemplate.h:
+        Add missing constants NSTransformableAttributeType and
+        NSObjectIDAttributeType.
+
 2022-06-12 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSImageCell.m,
